# aoc2024

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  main.rs  template.rs
