[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
image = "0.24"
colored = "2.1"
crossterm = "0.27"
rayon = "1.8"